Fix donate statistic
